# daisy

./: daisy.cabal
main/: daisy-filter.hs  latex-go  latex-make
src/Daisy/: Filter.hs
src/Daisy/Filter/: Flat.hs  Print.hs  Tree.hs
